# cuda_image_modifications_project

./: .gitmodules  CMakeLists.txt  README.md
data/: th.ppm
outputs/: output_edge.txt  output_invert.txt  sloth.pgm  sloth_cannyEdgeDetection.pgm  small-pattern.pgm  small-pattern_cannyEdgeDetection.pgm  th.pgm  th_cannyEdgeDetection.pgm
src/: cannyEdgeDetectorNPP.cpp  functions.h  getDevice.cpp  invert.cpp  main.cu
